feat: Switch from OpenAI to OpenRouter and configure Clerk domain
- Replace OpenAI with OpenRouter for AI-powered food analysis
- Update model names to use OpenRouter format (openai/gpt-4o)
- Add OPENROUTER_API_KEY environment variable
- Add CLERK_DOMAIN environment variable for Convex auth config
- Remove accidentally added convex.json file
- Keep Clerk as the primary authentication provider

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key_here
 EXPO_PUBLIC_CONVEX_URL=https://your-project.convex.cloud
 CONVEX_DEPLOY_KEY=prod:your-project|your_deploy_key_here
+
+# OpenRouter API key for AI features
+OPENROUTER_API_KEY=your_openrouter_api_key_here
