fix: Resolve Expo Go compatibility and build configuration
- Fix referralCodes import paths by moving to utils directory
- Update EAS build configuration with auto-increment for iOS
- Remove duplicate onboarding-2.tsx file
- Configure proper build number incrementing to prevent App Store submission errors
- Add resource class for faster builds

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,19 @@
+# Clerk Authentication
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key_here
-EXPO_PUBLIC_CONVEX_URL=https://your-project.convex.cloud
-CONVEX_DEPLOY_KEY=prod:your-project|your_deploy_key_here
+CLERK_DOMAIN=your-clerk-domain.clerk.accounts.dev
 
-# OpenRouter API key for AI features
+# Convex Backend
+EXPO_PUBLIC_CONVEX_URL=https://your-convex-instance.convex.cloud
+CONVEX_DEPLOY_KEY=your_convex_deploy_key_here
+
+# OpenRouter API (for AI features)
 OPENROUTER_API_KEY=your_openrouter_api_key_here
+
+# Mixpanel Analytics
+EXPO_PUBLIC_MIXPANEL_TOKEN=your_mixpanel_project_token_here
+
+# Adjust Mobile Attribution
+EXPO_PUBLIC_ADJUST_APP_TOKEN=your_adjust_app_token_here
+
+# Facebook SDK
+EXPO_PUBLIC_FACEBOOK_APP_ID=your_facebook_app_id_here
