Add comprehensive troubleshooting guide and fix iOS build issues
- Removed problematic openai package that was causing pod installation failures
- Fixed all pod installation issues and generated required Xcode configs
- Added TROUBLESHOOTING.md with detailed steps for fixing common issues
- Improved full-reset.sh script with more thorough cleanup
- Successfully built and ran iOS app after resolving all dependencies

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ OPENROUTER_API_KEY=your_openrouter_api_key_here
 # Mixpanel Analytics
 EXPO_PUBLIC_MIXPANEL_TOKEN=your_mixpanel_project_token_here
 
-# Adjust Mobile Attribution
+# Adjust Mobile Attribution (Optional - if not set, Adjust SDK won't initialize)
 EXPO_PUBLIC_ADJUST_APP_TOKEN=your_adjust_app_token_here
 
 # Facebook SDK
