--- a/package.json
+++ b/package.json
@@ -32,41 +32,40 @@
     "@convex-dev/auth": "^0.0.87",
     "@expo-google-fonts/dm-sans": "^0.4.1",
     "@expo-google-fonts/dm-serif-display": "^0.4.1",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "~14.0.4",
     "@gorhom/bottom-sheet": "^5.0.5",
     "@lottiefiles/dotlottie-react": "^0.6.5",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.0.14",
     "@superwall/react-native-superwall": "^2.0.0",
     "convex": "^1.19.2",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.39",
+    "expo": "~52.0.47",
     "expo-camera": "~16.0.18",
-    "expo-clipboard": "^7.1.5",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
-    "expo-crypto": "^14.1.5",
+    "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.19",
+    "expo-router": "~4.0.21",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.22",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
-    "expo-store-review": "^8.0.1",
-    "expo-system-ui": "~4.0.8",
+    "expo-store-review": "~8.0.1",
+    "expo-system-ui": "~4.0.9",
     "expo-tracking-transparency": "~5.1.1",
     "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
     "lottie-react-native": "7.1.0",
     "mixpanel-react-native": "^3.1.2",
-    "openai": "^4.68.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-adjust": "^5.4.0",
+    "react-native": "0.76.9",
+    "react-native-adjust": "^5.4.1",
     "react-native-circular-progress": "^1.4.0",
     "react-native-fbsdk-next": "^13.4.1",
     "react-native-gesture-handler": "~2.20.2",
