--- a/package.json
+++ b/package.json
@@ -32,72 +32,70 @@
     "@convex-dev/auth": "^0.0.87",
     "@expo-google-fonts/dm-sans": "^0.4.1",
     "@expo-google-fonts/dm-serif-display": "^0.4.1",
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "~14.0.4",
     "@gorhom/bottom-sheet": "^5.0.5",
     "@lottiefiles/dotlottie-react": "^0.6.5",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "2.11.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
     "@superwall/react-native-superwall": "^2.0.0",
     "convex": "^1.19.2",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.0",
-    "expo-auth-session": "~6.3.15",
-    "expo-camera": "~16.1.11",
-    "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-crypto": "~14.1.5",
+    "expo": "~52.0.47",
+    "expo-camera": "~16.0.18",
+    "expo-clipboard": "~7.0.1",
+    "expo-constants": "~17.0.8",
+    "expo-crypto": "~14.0.2",
     "expo-dev-client": "^5.2.4",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.7",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
     "expo-notifications": "^0.31.4",
-    "expo-router": "~5.1.4",
-    "expo-secure-store": "~14.2.3",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-store-review": "~8.1.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-tracking-transparency": "~5.2.4",
-    "expo-updates": "~0.28.17",
-    "expo-web-browser": "~14.2.0",
-    "lottie-react-native": "7.2.2",
+    "expo-router": "~4.0.21",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-store-review": "~8.0.1",
+    "expo-system-ui": "~4.0.9",
+    "expo-tracking-transparency": "~5.1.1",
+    "expo-updates": "~0.27.4",
+    "expo-web-browser": "~14.0.2",
+    "lottie-react-native": "7.1.0",
     "mixpanel-react-native": "^3.1.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-adjust": "^5.4.1",
     "react-native-circular-progress": "^1.4.0",
     "react-native-fbsdk-next": "^13.4.1",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-charts": "^1.4.47",
-    "react-native-pager-view": "6.7.1",
+    "react-native-pager-view": "6.5.1",
     "react-native-purchases": "^8.11.10",
     "react-native-purchases-ui": "^8.11.10",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "^0.20.0",
-    "expo-auth-session": "~6.2.1"
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@react-native-community/cli": "^19.1.1",
     "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~9.2.0",
+    "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.9",
+    "jest-expo": "~52.0.6",
     "puppeteer": "^24.15.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
